# cortext

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ctx
.github/workflows/: ci.yml  publish.yml
c/: CMakeLists.txt  libcortex.h
c/test/: c_test.c  test.c  test.ctx
examples/: basic_usage.py  http_usage.py  sse_usage.py
src/cortex/: __init__.py  connection.py  cursor.py  exceptions.py
src/cortex-lite/: __init__.py  connection.py
src/cortex-lite/core/: bindings.py
src/cortex-lite/mcp/: server.py  tools.py
src/cortex-lite/mcp/auth/: __init__.py  apikey.py
src/cortex-lite/mcp/transport/: http.py  websocket.py
src/cortex/core/: __init__.py  bindings.py
src/cortex/mcp/: __init__.py  server.py
src/cortex/mcp/auth/: apikey.py
src/cortex/mcp/transport/: __init__.py  http.py  stdio.py  websocket.py
test/: test_example.py
tests/: test_example.py  test_http.py  test_websocket.py
