[project]
name = "cortex"
version = "0.1.0"
description = "The first embedded database built natively for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi>=2.0.0",
    "fastapi>=0.133.0",
    "mcp>=1.26.0",
    "pytest==9.0.2",
    "sse-starlette>=3.2.0",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/yourname/cortex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
]
[tool.pytest.ini_options]
testpaths = ["test"]   # or "tests" (match your folder name)
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
